--- a/1-html/index.html
+++ b/1-html/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>1. HTML</title>
 
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
@@ -14,17 +14,96 @@
 
     <link rel="stylesheet" href="./main.css">
     <script src="./main.js"></script>
+
+    <style type="text/tailwindcss">
+        @theme {
+            --color-base-100: oklch(98% 0.02 240);
+            --color-base-200: oklch(95% 0.03 240);
+            --color-base-300: oklch(92% 0.04 240);
+            --color-base-content: oklch(20% 0.05 240);
+            --color-primary: oklch(55% 0.3 240);
+            --color-primary-content: oklch(98% 0.01 240);
+            --color-secondary: oklch(70% 0.25 200);
+            --color-secondary-content: oklch(98% 0.01 200);
+            --color-accent: oklch(65% 0.25 160);
+            --color-accent-content: oklch(98% 0.01 160);
+            --color-neutral: oklch(50% 0.05 240);
+            --color-neutral-content: oklch(98% 0.01 240);
+            --color-info: oklch(70% 0.2 220);
+            --color-info-content: oklch(98% 0.01 220);
+            --color-success: oklch(65% 0.25 140);
+            --color-success-content: oklch(98% 0.01 140);
+            --color-warning: oklch(80% 0.25 80);
+            --color-warning-content: oklch(20% 0.05 80);
+            --color-error: oklch(65% 0.3 30);
+            --color-error-content: oklch(98% 0.01 30);
+        }
+    </style>
 </head>
 
-<body>
-    <header class="flex justify-between items-center gap-4 p-4 sticky top-0 h-12 mb-12">
-        <span></span>
-        <nav class="flex gap-4">
-            <a href="" class="underline hover:text-blue-600 focused:text-blue-800">Inicio</a>
-            <a href="" class="underline hover:text-blue-600 focused:text-blue-800">Acerca de</a>
-            <a href="" class="underline hover:text-blue-600 focused:text-blue-800">Contacto</a>
+<body class="flex flex-col bg-base-300 h-screen text-base-content border-base-content/50">
+    <header class="flex justify-between items-center gap-4 sticky top-0 h-12 bg-base-200 px-4">
+        <nav>
+            <ul class="flex gap-4">
+                <li>
+                    <a href="#inicio" class="underline hover:text-blue-600 focused:text-blue-800">Inicio</a>
+                </li>
+                <li>
+                    <a href="#clases" class="underline hover:text-blue-600 focused:text-blue-800">Clases</a>
+                </li>
+                <li>
+                    <a href="#contacto" class="underline hover:text-blue-600 focused:text-blue-800">Contacto</a>
+                </li>
+            </ul>
         </nav>
     </header>
+
+    <div class="p-4 flex flex-col gap-8 bg-base-100 h-full">
+        <main id="inicio">
+            <article>
+                <h1 class="text-xl">Introducción a <strong>HTML</strong></h1>
+                <p>En este módulo aprenderemos las bases de <strong>HTML</strong>, incluyendo <em>etiquetas
+                        semánticas</em></p>
+            </article>
+        </main>
+
+        <section id="clases">
+            <h2 class="text-lg">Clases del Bootcamp</h2>
+            <p>Aprenderás a desarrollar aplicaciones web modernas.</p>
+        </section>
+
+        <section id="contacto" class="flex flex-col gap-4">
+            <h2 class="text-lg">Contacto</h2>
+            <form action="/contact-submit" method="post" class="flex flex-col gap-4 max-w-sm">
+                <fieldset class="flex flex-wrap gap-4 border rounded-lg p-4">
+                    <legend>Datos de Contacto</legend>
+
+                    <label for="name" class="flex flex-col gap-2 w-full">
+                        <span>Nombre</span>
+                        <input type="text" id="name" name="name" class="bg-base-100 border rounded h-8 w-full">
+                    </label>
+
+                    <label for="phone" class="flex flex-col gap-2 w-full">
+                        <span>Teléfono</span>
+                        <input type="tel" id="phone" name="phone"
+                            class="bg-base-100 border rounded h-8 w-full">
+                    </label>
+
+                    <label for="email" class="flex flex-col gap-2 w-full">
+                        <span>Correo Electrónico</span>
+                        <input type="email" id="email" name="email"
+                            class="bg-base-100 border rounded h-8 w-full">
+                    </label>
+                </fieldset>
+
+                <button class="h-8 rounded bg-primary text-primary-content">
+                    Contactar
+                </button>
+            </form>
+
+        </section>
+
+    </div>
 </body>
 
 </html>
