[actividades] actualizar noticiero

--- a/actividades/noticiero/index.html
+++ b/actividades/noticiero/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <header>
-        <h1>Noticaleño</h1>
+        <h1 id="header-title">Noticaleño</h1>
+        <h2 id="header-subtitle">Su fuente confiable de noticias globales</h2>
     </header>
 
     <nav>
@@ -23,27 +24,18 @@
     </nav>
 
     <main>
-        <article>
-            <figure>
-                <img src="https://images.unsplash.com/photo-1585829365295-ab7cd400c167?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                    alt="Maquina de escribir con texto de noticias">
-                <figcaption>
-                    Noticias
-                </figcaption>
-            </figure>
-            <h2>Noticaleño, su fuente confiable</h2>
-            <p>Las ultimas noticias del país</p>
-        </article>
-
         <section id="deportes">
-            <img src="https://images.unsplash.com/photo-1461896836934-ffe607ba8211?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                alt="Hombre en el campo de atletismo">
+            <figure>
+                <img src="https://images.unsplash.com/photo-1461896836934-ffe607ba8211?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt="Hombre en el campo de atletismo">
+                <figcaption>Deportes</figcaption>
+            </figure>
 
             <article>
                 <figure>
                     <img src="https://imagenes2.eltiempo.com/files/image_382_290/files/fp/uploads/2025/09/30/68dc483796e38.r_d.1426-792.jpeg"
                         alt="Luis Diaz">
-                    <figcaption>FOTO: AFP</figcaption>
+                    <figcaption>Foto: AFP</figcaption>
                 </figure>
                 <h2>Luis Díaz se fue en blanco en la paliza del Bayern Múnich al Pafos como visitante, en la Liga de
                     Campeones</h2>
@@ -56,7 +48,7 @@
                 <figure>
                     <img src="https://imagenes2.eltiempo.com/files/image_1200_535/files/fp/uploads/2025/09/28/68d9b18f6f588.r_d.2292-1473.jpeg"
                         alt="Remco Evenepoel">
-                    <figcaption>Remco Evenepoel en el Mundial de ciclismo 2025 Foto: AFP</figcaption>
+                    <figcaption>Foto: AFP</figcaption>
                 </figure>
                 <h2>Mecánico explotó contra Remco Evenepoel, quien le culpó al equipo tras perder el oro en el
                     Mundial de ciclismo</h2>
@@ -67,8 +59,7 @@
                 <figure>
                     <img src="https://imagenes2.eltiempo.com/files/image_1200_535/uploads/2025/09/30/68dc7ab73e04d.jpeg"
                         alt="Richard Rios">
-                    <figcaption>José Mourinho (izq.) lamento el autogol de Ríchard Ríos (der.) Foto: Efe y AFP
-                    </figcaption>
+                    <figcaption>Foto: Efe y AFP </figcaption>
                 </figure>
                 <h2>'Frustrante': así calificó José Mourinho el autogol de Ríchard Ríos con el que Benfica perdió
                     contra el Chelsea en la Liga de Campeones</h2>
@@ -88,8 +79,7 @@
                 <figure>
                     <img src="https://imagenes2.eltiempo.com/files/image_1200_535/uploads/2023/01/26/63d2d5ec3f58b.jpeg"
                         alt="persona mirando imagenes holograficas">
-                    <figcaption>El 26 % de los colombianos conoce alguna herramienta de IA, mientras que el 24 % ya las
-                        utiliza. Foto: iStock</figcaption>
+                    <figcaption>Foto: iStock</figcaption>
                 </figure>
                 <h2>Apropiación digital en Colombia: entre inteligencia artificial, móviles y uso de internet</h2>
                 <p>¿Cómo estamos en conectividad, uso de redes sociales, banca digital e IA? El estudio del Centro
@@ -100,7 +90,7 @@
                 <figure>
                     <img src="https://imagenes2.eltiempo.com/files/image_1200_535/uploads/2025/09/25/68d5ab0a57a1e.png"
                         alt="Xiaomi 15T Rosa Metálico">
-                    <figcaption>Xiaomi presentó recientemente la nueva gama 15T. Foto: Xiaomi</figcaption>
+                    <figcaption>Foto: Xiaomi</figcaption>
                 </figure>
                 <h2>Los cinco rivales dignos que desafían al nuevo iPhone 17 Pro</h2>
                 <p>Aunque parece que el nuevo dispositivo de Apple y sus variantes Pro seguirán destacando dentro de la
@@ -109,8 +99,9 @@
 
             <article>
                 <figure>
-                    <img src="https://imagenes2.eltiempo.com/files/image_1200_535/uploads/2025/09/26/68d6fe008a97f.png" alt="Gato mirando logo de xbox en luces neon">
-                    <figcaption>Xbox mostró 25 juegos en Tokyo Game Show 2025 con Japón como eje central de novedades Foto: Xbox</figcaption>
+                    <img src="https://imagenes2.eltiempo.com/files/image_1200_535/uploads/2025/09/26/68d6fe008a97f.png"
+                        alt="Gato mirando logo de xbox en luces neon">
+                    <figcaption>Foto: Xbox</figcaption>
                 </figure>
                 <h2>Tokyo Game Show 2025: las novedades anunciadas durante el evento, incluida la ambientación de Forza
                     Horizon 6</h2>
@@ -129,8 +120,7 @@
                 <figure>
                     <img src="https://imagenes2.eltiempo.com/files/image_1200_535/files/fp/uploads/2025/04/24/680a7d27ad7a7.r_d.548-1596.jpeg"
                         alt="">
-                    <figcaption>Sede principal del Banco de la República en pleno centro histórico de Bogotá
-                        (Colombia). Foto: JOHN W VIZCAINO/ELTIEMPO</figcaption>
+                    <figcaption>Foto: JOHN W VIZCAINO/ELTIEMPO</figcaption>
                 </figure>
                 <h2>Junta directiva del Banco de la República deja en 9,25 % tasas de interés y confirma cancelación
                     de la línea flexible de crédito con el FMI; razones</h2>
