[actividades][tarjeta] actualizar foto de gato

--- a/actividades/tarjeta/index.html
+++ b/actividades/tarjeta/index.html
@@ -30,7 +30,7 @@
 
             <div class="card-body">
                 <div class="card-image-container">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXZ8ORCFOkes_5zSVPN14Pj_AvxZuguzoizQ&s"
+                    <img src="https://cdn.sanity.io/images/eiv7idgq/production/938dbb4b45f4e42a4841f92f4907ce4be0160e7e-1040x500.jpg?auto=format&fit=max&q=75&w=1040"
                         alt="foto de perfil" class="card-image">
                 </div>
 
